# ChangeLog for net-p2p/ctorrent
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/ctorrent/ChangeLog,v 1.16 2006/10/09 20:02:09 drizzt Exp $

  09 Oct 2006; Timothy Redaelli <drizzt@gentoo.org>
  ctorrent-1.3.4-r3.ebuild:
  Added ~x86-fbsd keyword.

  27 Jun 2006; Joshua Jackson <tsunam@gentoo.org> ctorrent-1.3.4-r3.ebuild:
  Stable on x86; bug #137387

  25 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  ctorrent-1.3.4-r3.ebuild:
  ppc stable, bug #137387

  20 Jun 2006; Jon Hood <squinky86@gentoo.org> -ctorrent-1.3.4-r1.ebuild,
  ctorrent-1.3.4-r3.ebuild:
  Stable on amd64. Remove buggy versions.

  12 May 2006; Joshua Jackson <tsunam@gentoo.org> ctorrent-1.3.4-r2.ebuild:
  Stable on x86; bug #132394

  11 May 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  ctorrent-1.3.4-r2.ebuild:
  ppc stable, bug #132394

  09 May 2006; Jon Hood <squinky86@gentoo.org> ctorrent-1.3.4-r2.ebuild:
  Stable on amd64, #132394.

*ctorrent-1.3.4-r3 (01 May 2006)

  01 May 2006; Jon Hood <squinky86@gentoo.org>
  +files/ctorrent-1.3.4-dnh2-SHA.patch,
  +files/ctorrent-1.3.4-dnh2-vfat.patch, +ctorrent-1.3.4-r3.ebuild:
  Version bump, #131903. Thanks to TGL <degrenier@easyconnect.fr> for the
  updates.

  30 Oct 2005; Jason Wever <weeve@gentoo.org> ctorrent-1.3.4-r2.ebuild:
  Added ~sparc keyword.

*ctorrent-1.3.4-r2 (29 Oct 2005)

  29 Oct 2005; Karol Wojtaszek <sekretarz@gentoo.org>
  +ctorrent-1.3.4-r2.ebuild:
  Added new patches, which fix a lot of things, bug #110133

  13 Sep 2005; <mkay@gentoo.org> -ctorrent-1.3.4.ebuild,
  ctorrent-1.3.4-r1.ebuild:
  Some cleanup. fix bug #69678

  05 Feb 2005; Jan Brinkmann <luckyduck@gentoo.org> ctorrent-1.3.4-r1.ebuild:
  added ~amd64 to KEYWORDS. fixes #80897

*ctorrent-1.3.4-r1 (28 Nov 2004)

  28 Nov 2004; Jon Hood <squinky86@gentoo.org> +ctorrent-1.3.4-r1.ebuild:
  Version bump, fix CFLAGS, #69678, thanks mkennedy.
